Work on Zech.html page

--- a/Zech.html
+++ b/Zech.html
@@ -1,16 +1,28 @@
 <html>
     <head>
-        <link rel="stylesheet" href="CSS Sheets\WebsiteStyle.css">
+        <link rel="stylesheet" href="WebsiteStyle.css">
         <style>
-
+            img
+            {
+                height:200px;
+            }
+            .TopPart
+            {
+                background-image: url(MaliciousIntentLineup.png);
+            }
         </style>
         <title>OptiaVerse: Malicious Intent</title>
     </head>
 
     <body>
-
+        <div class="TopPart">
+            <div class="headerBlock"></div>
+            <div class="titleBlock">
+                <img src="Title.png">
+            </div>
+            <div class="headerBlock"></div>
+        </div>
+        
+        <!--<img src="MaliciousIntent.png" style="float:left">-->
     </body>
 </html>
-
-
-
