--- a/Aaryan.html
+++ b/Aaryan.html
@@ -1,1 +1,19 @@
-9h9h9h
+<html>
+<head>
+
+    <link rel="stylesheet" href="WebsiteStyle.css">
+
+
+</head>
+<body>
+    
+
+
+
+
+
+
+</body>
+
+</html>
+
