--- a/Aaryan.html
+++ b/Aaryan.html
@@ -35,7 +35,7 @@
     <strong><center>SO ARE YOU READY TO TAKE ON THE ULTIMATE VALET PARKING CHALLENGE?</center></strong>
     </p>
     <marquee behaviour="scroll" direction="right">
-        <img src="image-removebg-preview (19).png"
+        <img src="image-removebg-preview (19).png">
     </marquee>
 </body>
 </html>
